--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,3 +76,23 @@ body {
   color: red;
   z-index: -1;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 49;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  backdrop-filter: blur(8px); /* Apply the blur effect */
+  -webkit-backdrop-filter: blur(8px); /* Safari support */
+}
+
+.showOverlay {
+  opacity: 1;
+  pointer-events: auto;
+}
